--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "dependencies": {
-    "bc-stubs": "^106.0.0-Beta.1",
-    "esbuild": "^0.23.0",
+    "bc-stubs": "^106.0.0",
     "typescript": "^5.5.3"
   },
   "name": "zoelib",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "1.0.2",
+  "main": "src/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsup"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "UNLICENSED",
   "description": ""
 }
